# creator-assembler

./: .codacy.yaml  Cargo.toml  README.md  build.sh
.github/workflows/: test.yml
benches/: arch.json  benchmark.rs
js_example/: assembler.mjs  index.html  node.js  web.js
src/: architecture.rs  compiler.rs  error_rendering.rs  js.rs  lib.rs  main.rs  number.rs  parser.rs  span.rs
src/architecture/: json.rs  utils.rs
src/compiler/: bit_field.rs  error.rs  file_cache.rs  integer.rs  label.rs  pseudoinstruction.rs  section.rs
src/parser/: error.rs  expression.rs  instruction.rs  lexer.rs
tests/: architecture.json  architecture2.json  architecture_no_kernel.json
