[package]
name = "creator-assembler"
version = "2.0.0"
edition = "2021"
license = "LGPL-2.1-or-later"
description = "A reimplementation of Creator (https://creatorsim.github.io/)'s assembler"
categories = ["command-line-utilities", "compilers"]
keywords = ["compiler", "assembly", "assembler", "Creator"]
rust-version = "1.89"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [
    "cdylib", # required for wasm
    "rlib",   # required for static rust libraries
]

[[bin]]
name = "creator-assembler"
required-features = ["cli"]

[features]
default = ["js", "cli"]
# Enable JS interoperability support
js = [
    "console_error_panic_hook",
    "wasm-bindgen",
    "self_cell",
    "ansi-to-html",
    "pseudoinstructions",
]
# Enable pseudoinstruction evaluation. Requires execution in WebAssembly
pseudoinstructions = ["js-sys"]
# Enable CLI interface
cli = ["clap"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
schemars = "0.8"
ariadne = "0.5.1"
chumsky = { version = "0.10.1", features = ["pratt"] }
regex = "1.11.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"

# CLI interface
clap = { version = "4.5.39", optional = true, features = ["derive"] }

# JS interoperation dependencies
wasm-bindgen = { version = "=0.2.102", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
self_cell = { version = "1.2.0", optional = true }
ansi-to-html = { version = "0.2.2", optional = true, features = ["lazy-init"] }
js-sys = { version = "0.3.77", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
criterion = "0.7"

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ["-O", "-g"]

[[bench]]
name = "benchmark"
harness = false
